fix(action): fix typo in action name
Co-authored-by: stuebingerb <41049452+stuebingerb@users.noreply.github.com>

--- a/.github/workflows/verify-kotlin-refactoring-challenge.yml
+++ b/.github/workflows/verify-kotlin-refactoring-challenge.yml
@@ -6,7 +6,7 @@ name: "Verify #5 Kotlin Refactoring"
       - '5_Kotlin_Refactoring/**'
 
 jobs:
-  verify_challange:
+  verify_challenge:
     name: "Verify #5 Kotlin Refactoring"
     runs-on: ubuntu-latest
     steps:
