--- a/.github/workflows/verify-javascript-minimalist-challenge.yml
+++ b/.github/workflows/verify-javascript-minimalist-challenge.yml
@@ -12,7 +12,9 @@ jobs:
     steps:
       - name: 📦 Checkout
         uses: actions/checkout@v3
-
+      - uses: actions/setup-node@v3
+        with:
+          node-version-file: '4_JavaScript_Minimalist/.nvmrc'
       - name: Check Spec
         run: |
           cd 4_JavaScript_Minimalist
